# gtkdrive

./: .gitignore  CMakeLists.txt  README.md  gen-eclipse.sh
include/google/calendar_api/: Makefile
lib/: libcurl.la  libcurl.so.4.3.0  libgflags.la  libgflags_nothreads.la  libgflags_nothreads.so.2.1.0  libglog.la  libglog.so.0.0.0
lib/pkgconfig/: libcrypto.pc  libcurl.pc  libgflags.pc  libglog.pc  libssl.pc  openssl.pc
src/: CMakeLists.txt  calendar_sample_main.cpp
src/include/google/calendar_api/: CTestTestfile.cmake  cmake_install.cmake
src/include/google/drive_api/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/include/openssl/: opensslconf.h
src/lib/: libgflags.so.2.1.0  libglog.la  libglog.so.0.0.0
src/lib/pkgconfig/: libgflags_nothreads.pc
src/src/: CMakeLists.txt  auth.cpp  auth.h  auth_wrapper.cpp  auth_wrapper.h  drive_wrapper.cpp  drive_wrapper.h  gtkdrive.cpp  gtkdrive.h  main.cpp  wizard-mm.cpp  wizard-mm.h  wizard.c  wizard.cpp  wizard.h
